# abstraxion-chess

./: .env.example  .gitignore  README.md  package-lock.json  package.json  setup.sh
abstraxion_ui/: package-lock.json  package.json
abstraxion_ui/src/app/: layout.tsx  page.tsx
abstraxion_ui/src/components/: ChessBoard.tsx  LoadingModal.tsx  TimeDisplay.tsx
abstraxion_ui/src/hooks/: useChessGame.ts  useEloCalculator.ts  useGlobalStats.ts  useUserProfile.ts  useUserProfileUnified.ts
abstraxion_ui/src/types/: chess.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: LoadingModal.tsx
xion_chess/: Cargo.toml  DEPLOYMENT.md  FASTEST_CHECKMATES.md  NOTICE  deploy.sh  redeploy.sh  setup-env.sh
xion_chess/src/: contract.rs  error.rs  helpers.rs  integration_tests.rs  msg.rs  state.rs  tests.rs
